2009-04-29 Michael Klapper <michael.klapper@aoemedia.de>
	* Replace class tx_l10nmgr_models_importer_importService with tx_l10nmgr_service_importTranslation
	* Update PHPdoc of domain/translation package
	* Rename some methods from the translatable package to be compatible to the translation package 
	* Improve the translation package testcases
	* Rename interface package
	* Rename existing interfaces to the new package name
	* Add new Interface interface.tx_l10nmgr_interface_stateImportable.php
	* Package translatable: update code indention, PHPdoc, add some command processing informations to the class "tx_l10nmgr_models_translateable_translateableField"
	* Add tx_l10nmgr_interface_stateImportable to classes of package "translation"
	* Prepare logging method to the class "tx_l10nmgr_domain_translation_data"
	* Change the interface package and its name "tx_l10nmgr_interfaces_wordsCountable" the package "interfaces" is now "interface"
	* Add throw tx_mvc_exception_skipped if an field is marked as skipped on "tx_l10nmgr_domain_translation_field::markSipped"
	* Refactor the "tx_l10nmgr_service_importTranslation"
	* Add exportRecordUid member to the class.tx_l10nmgr_domain_translation_data.php 

2009-04-28 Michael Klapper <michael.klapper@aoemedia.de>
	* Add some PHPdoc
	* Remove some whitespaces from classes
	* Improve the tx_l10nmgr_domain_translationFactory to read CDATA and HTML
	* Improve the testcase for the translation package
	* Move translation subpackage to domain package
	* Add initial tx_l10nmgr_service_importTranslation, tx_l10nmgr_service_importTranslation_basic_testcase

2009-04-27 Michael Klapper <michael.klapper@aoemedia.de>
	* Add initial translation model incl. first testcase
	* Add some PHPdoc
	* Remove some whitespaces from classes
	* Add class.tx_l10nmgr_models_translation_basic_testcase.php
	* Reorganize the translation texts

2009-04-15 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Version 4.0.0 now
	* Added modules export & import